# whisper-sample

./: .env.tmp  .gitignore  Dockerfile  README.md  compose.yml  install.sh  main.py  pyproject.toml  requirements.txt
